--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -9,12 +9,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y imagemagick
 
       - name: Run GitHub Snake
         uses: platane/snk@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          output: .github/snake/snake.gif
+
 
